--- a/src/eda/eda.ipynb
+++ b/src/eda/eda.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "def load_data():\n",
-    "    conn = sqlite3.connect(\"crypto_data.db\")\n",
+    "    # conn = sqlite3.connect(\"crypto_data.db\")\n",
     "    df = pd.read_sql_query(\"SELECT * FROM prices\", conn)\n",
     "    conn.close()\n",
     "    df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
